Progress on backend

--- a/ChoreMongerServer/war/WEB-INF/logging.properties
+++ b/ChoreMongerServer/war/WEB-INF/logging.properties
@@ -11,4 +11,4 @@
 
 # Set the default logging level for all loggers to WARNING
 .level = WARNING
-com.choremonger.server.CustomerResourceImpl.level = ALL
+com.choremonger.server.level = ALL
