--- a/AndroidApp/choresMonger/AndroidManifest.xml
+++ b/AndroidApp/choresMonger/AndroidManifest.xml
@@ -5,7 +5,7 @@
       android:versionName="1.0">
     <application android:icon="@drawable/choresmonger" android:label="@string/app_name" android:debuggable="true">
   
-        <activity android:name=".WelcomeActivity"
+        <activity android:name=".MainMenuActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,7 @@
 <activity android:name="LostPasswordActivity"></activity>
 <activity android:name="SignUPFamilyMemberActivity"></activity>
 <activity android:name="AddNewFamilyMember"></activity>
-<activity android:name="MainMenuActivity"></activity>
+<activity android:name="WelcomeActivity"></activity>
 <activity android:name="RewardsCenterActivity"></activity>
 <activity android:name="MyRewardsActivity"></activity>
 <activity android:name="RewardDetailsActivity"></activity>
