--- a/AndroidApp/choresMonger/AndroidManifest.xml
+++ b/AndroidApp/choresMonger/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.android.chores"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application android:icon="@drawable/choresmonger" android:label="@string/app_name" android:debuggable="true">
   
         <activity android:name=".MainMenuActivity"
@@ -28,7 +29,4 @@
 <activity android:name="CreateNewRewardActivity"></activity>
 </application>
     <uses-sdk android:minSdkVersion="8" />
-
-<uses-permission android:name="android.permisssion.INTERNET">
-</uses-permission>
 </manifest> 
