--- a/AndroidApp/choresMonger/AndroidManifest.xml
+++ b/AndroidApp/choresMonger/AndroidManifest.xml
@@ -29,6 +29,6 @@
 </application>
     <uses-sdk android:minSdkVersion="8" />
 
-<uses-permission android:name="android.permisssion.INTERNET">
+<uses-permission android:name="android.permission.INTERNET">
 </uses-permission>
 </manifest> 
