--- a/AndroidApp/choresMonger/AndroidManifest.xml
+++ b/AndroidApp/choresMonger/AndroidManifest.xml
@@ -3,10 +3,11 @@
       package="com.android.chores"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET">
+    </uses-permission>
     <application android:icon="@drawable/choresmonger" android:label="@string/app_name" android:debuggable="true">
   
-        <activity android:name=".MainMenuActivity"
+        <activity android:name=".AccountList"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,12 +28,14 @@
 <activity android:name="RewardManagementActivity"></activity>
 <activity android:name="EditRewardActivity"></activity>
 <activity android:name="CreateNewRewardActivity"></activity>
+<activity android:name="MainMenuActivity"></activity>
 </application>
     <uses-sdk android:minSdkVersion="8" />
-<<<<<<< HEAD
+
 
 <uses-permission android:name="android.permission.INTERNET">
+<uses-permission android:name="android.permission.GET_ACCOUNTS"></uses-permission>
+<uses-permission android:name="android.permission.USE_CREDENTIALS"></uses-permission>
 </uses-permission>
-=======
->>>>>>> c23ccbf20aa0d982618e09b3e87082657053a769
+
 </manifest> 
