--- a/AndroidApp/choresMonger/AndroidManifest.xml
+++ b/AndroidApp/choresMonger/AndroidManifest.xml
@@ -7,7 +7,7 @@
     </uses-permission>
     <application android:icon="@drawable/choresmonger" android:label="@string/app_name" android:debuggable="true">
   
-        <activity android:name=".AccountList"
+        <activity android:name=".WelcomeActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,6 @@
 <activity android:name="LostPasswordActivity"></activity>
 <activity android:name="SignUPFamilyMemberActivity"></activity>
 <activity android:name="AddNewFamilyMember"></activity>
-<activity android:name="WelcomeActivity"></activity>
 <activity android:name="RewardsCenterActivity"></activity>
 <activity android:name="MyRewardsActivity"></activity>
 <activity android:name="RewardDetailsActivity"></activity>
@@ -34,8 +33,6 @@
 
 
 <uses-permission android:name="android.permission.INTERNET">
-<uses-permission android:name="android.permission.GET_ACCOUNTS"></uses-permission>
-<uses-permission android:name="android.permission.USE_CREDENTIALS"></uses-permission>
 </uses-permission>
 
 </manifest> 
