--- a/AndroidApp/choresMonger/AndroidManifest.xml
+++ b/AndroidApp/choresMonger/AndroidManifest.xml
@@ -7,7 +7,7 @@
     </uses-permission>
     <application android:icon="@drawable/choresmonger" android:label="@string/app_name" android:debuggable="true">
   
-        <activity android:name=".WelcomeActivity"
+        <activity android:name=".MainMenuActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,8 @@
 <activity android:name="RewardManagementActivity"></activity>
 <activity android:name="EditRewardActivity"></activity>
 <activity android:name="CreateNewRewardActivity"></activity>
-<activity android:name="MainMenuActivity"></activity>
+<activity android:name="WelcomeActivity"></activity>
+<activity android:name="RewardHistoryActivity"></activity>
 </application>
     <uses-sdk android:minSdkVersion="8" />
 
